--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Mastodontest</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="app_name">mstdnp</string>
+    <string name="title_activity_main">mstdnp</string>
 
     <!-- Strings related to Settings -->
 
@@ -73,18 +73,10 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="title_activity_login">Sign in</string>
 
-    <!-- Strings related to login -->
+    <!-- Strings related to auth -->
     <string name="prompt_instance">instance domain</string>
     <string name="text_default_instance">mastodon.social</string>
     <string name="action_next">Next</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="error_auth_failed">Error</string>
 </resources>
