--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,81 +2,36 @@
     <string name="app_name">mstdnp</string>
     <string name="title_activity_main">mstdnp</string>
 
-    <!-- Strings related to Settings -->
-
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
-
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
-
     <!-- Strings related to auth -->
     <string name="prompt_instance">instance domain</string>
     <string name="text_default_instance">mastodon.social</string>
     <string name="action_next">Next</string>
     <string name="error_auth_failed">Error</string>
+
+    <!-- Strings related to service -->
+    <string name="message_tooting">Tooting…</string>
+    <string name="message_toot_sent">Toot sent</string>
+    <string name="error_toot_failed">Toot error</string>
+
+    <!-- notification -->
+    <string name="notify_title_enabled">Auto toot enabled</string>
+    <string name="notify_title_disabled">Auto toot disabled</string>
+    <string name="notify_text">Tap to configure</string>
+    <string name="action_enable">Enable</string>
+    <string name="action_disable">Disable</string>
+
+    <!-- Strings related to pref -->
+    <string name="pref_title_enabled">Auto toot</string>
+    <string name="pref_title_scope">Scope</string>
+    <string-array name="pref_scope_entries">
+        <item>🌏 Public</item>
+        <item>🔓 Unlisted</item>
+        <item>🔒 Private</item>
+    </string-array>
+    <string-array name="pref_scope_values">
+        <item>public</item>
+        <item>unlisted</item>
+        <item>private</item>
+    </string-array>
+
 </resources>
